--- a/proyectoCEIJA5/package.json
+++ b/proyectoCEIJA5/package.json
@@ -16,6 +16,8 @@
     "@hookform/resolvers": "^3.10.0",
     "axios": "^1.7.7",
     "formik": "^2.4.6",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
